Update dependencies, support Java 25 builds